# vpn-client-rust

./: Cargo.toml  build.sh  inner_node.toml  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue  i18n.ts  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  connection.rs  lib.rs  main.rs  wireguard.rs
